--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
+numpy<1.17
 scipy
 Pillow
 cython
 matplotlib
-scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+scikit-image==0.16.2
+tensorflow==1.9.0
+keras==2.0.8
 opencv-python
 h5py
 imgaug
